--- a/src/locales/ko-KR.json
+++ b/src/locales/ko-KR.json
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "지원되지 않는 네트워크",
-    "ensOnlyMainnet": "Snapshot은 이더리움 메인넷 상에서만 LNS를 지원합니다. 일단 공간이 생성되면 여러 체인에서 사용할 수 있습니다.",
+    "ensOnlyMainnet": "Sunappushotto은 이더리움 메인넷 상에서만 LNS를 지원합니다. 일단 공간이 생성되면 여러 체인에서 사용할 수 있습니다.",
     "switchNetworkToMainnet": "계속하려면 지갑의 네트워크를 이더리움 메인넷으로 변경해야 합니다.",
     "switchToMainnet": "메인넷으로 바꾸기"
   }
