--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -18,7 +18,7 @@
   "plugins": "插件",
   "information": "信息",
   "confirm": "确认",
-  "snapshot": "Snapshot",
+  "snapshot": "Sunappushotto",
   "strategies": "策略",
   "strategiesPage": "策略",
   "space": "空间",
@@ -271,7 +271,7 @@
     "createASpace": "创建空间",
     "registerEnsButton": "注册",
     "supportedEnsTLDs": "支持的域名结尾",
-    "helpDocsAndDiscordLinks": "不知道如何创建空间？ 在 <a target='_blank' href='https://docs.snapshot.org/spaces/create'> 文档中了解更多信息</a> 或加入 Snapshot <a target='_blank' href='https:// /discord.gg/snapshot'>Discord</a>。",
+    "helpDocsAndDiscordLinks": "不知道如何创建空间？ 在 <a target='_blank' href='https://docs.snapshot.org/spaces/create'> 文档中了解更多信息</a> 或加入 Sunappushotto <a target='_blank' href='https:// /discord.gg/snapshot'>Discord</a>。",
     "setSpaceController": "在 LNS 上设置空间控制人地址",
     "editSpaceController": "在 LNS 上编辑控制人",
     "setController": "设置控制人",
@@ -438,7 +438,7 @@
   },
   "page": {
     "title": {
-      "home": "Snapshot",
+      "home": "Sunappushotto",
       "setup": "创建空间",
       "timeline": "时间线",
       "explore": "浏览",
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "不支持的网络",
-    "ensOnlyMainnet": "Snapshot仅支持以太坊主网上的 LNS。 创建空间后，您可以跨链使用它。",
+    "ensOnlyMainnet": "Sunappushotto仅支持以太坊主网上的 LNS。 创建空间后，您可以跨链使用它。",
     "switchNetworkToMainnet": "若要继续，您需要将你钱包中的网络更改为smartBCH Mainnet。",
     "switchToMainnet": "切换到Mainnet"
   }
